<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Onboarding & Profile -->
    <string name="welcome">Welcome</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="mobile_verification">Verify</string>
    <string name="resend_code_">Resend Code?</string>
    <string name="done">Done</string>
    <string name="welcomes_you_some_text_goes_here">Enter your mobile number</string>
    <string name="enter_verification_code_sent_to_">We\'ve sent a code to your number</string>
    <string name="your_mobile_number_is_safe_with_us">Your mobile number is safe with us.</string>
    <string name="we_won_t_share_your_details_with_any_one">We won\'t share your details with anyone.</string>
    <string name="change">Change</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm_password" translatable="false">Confirm password</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="your_details" translatable="false">Your Details</string>
    <string name="location" translatable="false">Location</string>
    <string name="profile" translatable="false">Profile</string>

    <!-- Home tab -->
    <string name="app_name">SBM-Engineer</string>
    <string name="post_a_complaint">Post a complaint</string>

    <!--Grievance-->
    <string name="more_information">More information</string>
    <string name="thank_you">Thank you!</string>
    <string name="no_complaints">No Complaints</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="resolve">Resolve</string>
    <string name="_votes">" Votes"</string>
    <string name="_comments">" Comments"</string>
    <string name="be_the_first_to_comment">Be the first to comment</string>
    <string name="change_status">Change Status</string>
    <string name="you_re_changing_the_status_of_the_complaint_to_new_status">You\'re changing the status of the complaint to #NEW_STATUS.</string>
    <string name="submit">Submit</string>
    <string name="notification">Notifications</string>
    <string name="previously_read">Previously read</string>
    <string name="no_read_notification">No read notification</string>


    <!--    Messages-->
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="could_not_connect_to_internet">Could not connect to internet</string>
    <string name="something_went_wrong">Something went wrong. response code -  </string>
    <string name="select_an_image">Select an Image</string>

    <!--sidemenu-->
    <string name="rate_us_on_playstore">Rate Us on Playstore</string>
    <string name="report_bug">Report Bug</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="logout">Logout</string>

    <!--change_status-->
    <string name="you_are_changing_the_status_of_the_complaint_please_leave_a_comment_about_your_experience_or_if_you_have_any_remarks_you_can_add_photos_as_well_to_your_comment_">Please leave a comment about your experience or if you have any remarks. You can add a photo as well to your comment.</string>
    <string name="rejected">Rejected</string>
    <string name="address">Address</string>
    <string name="all_complaints">All Complaints</string>
    <string name="high_priority_complaints">High Priority Complaints</string>
    <string name="on_the_job_complaints">On The Job Complaints</string>
    <string name="re_opened_complaints">Re-Opened Complaints</string>
    <string name="resolved_complaints">Resolved Complaints</string>
    <string name="rejected_complaints">Rejected Complaints</string>
    <string name="id_">"ID: "</string>
    <string name="get_started">NEXT</string>
    <string name="yes">Yes</string>
    <string name="un_assigned_complaints" translatable="false">Un-Assigned Complaints</string>
    <string name="powered_by_" translatable="false">"powered by "</string>
    <string name="tracking_id" translatable="false">UA-51350206-11</string>
    <string name="set_password" translatable="false">Set Password</string>
    <string name="login_with_password" translatable="false">Login with password</string>
    <string name="change_status_rejected" translatable="false">Please select a reason
        from below for rejecting this complaint.</string>


    <!--OTHERS-->
    <string name="mobile_number_cannot_be_empty">Mobile Number cannot be empty</string>
    <string name="_10_digit_mobile_number">Mobile number</string>
    <string name="mobile_number_needs_10_digits">10 digit mobile number needed</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="comment">Comment</string>
    <string name="you">You</string>
    <string name="vote_up">Vote Ups</string>
    <string name="load_more">Load More</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="gallery">Gallery</string>
    <string name="no_data">No Data</string>
    <string name="notifs">Notifs</string>
    <string name="write_a_comment">Write a comment </string>
    <string name="language">Language</string>
    <string name="no">No</string>
    <string name="comments">Comment(s)</string>
    <string name="landmark">Landmark</string>
    <string name="resolved">Resolved</string>
    <string name="on_the_job">On the job</string>
    <string name="english" translatable="false">English</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="login_to_your_account">Log in to your account</string>
    <string name="already_user" translatable="false">Already user?</string>
    <string name="dont_have_account" translatable="false">Dont have account?</string>
    <string name="please_upload_an_image_and_then_resolve_the_complaint_to_resolved" translatable="false">Image upload is mandatory to resolve a complaint</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="preview" translatable="false">Preview</string>
    <string name="app_setting_and_enable_permission" translatable="false">Please go to App settings and enable permissions</string>
    <string name="mark_as" translatable="false">Mark as</string>
    <string name="select_less_mb_image" translatable="false">Please select an image less than 8MB</string>

    <!--COVID-19-->
    <string name="skip">Skip Selection</string>
    <string name="more_information_landmark_contact">Landmark, name, phone number, address</string>
    <string name="assigned_complaints">Assigned Complaints</string>
    <string name="please_wait_for">"Please wait for "</string>
    <string name="seconds_to_resend_otp">seconds,\n to resend OTP code</string>
    <string name="are_you_sure_to_logout">Are you sure to logout ?</string>
    <string name="complaints">Complaints</string>


</resources>