<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/primaryDark"
        android:theme="@style/ToolbarTheme"
        android:minHeight="?android:attr/actionBarSize" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/horizontal_vertical_spacing"
        android:background="@drawable/edittext_locationbg"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3">


        <Button
            android:id="@+id/rippleViewCamera"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/take_a_picture"
            android:textColor="@color/primerColorBlack" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black" />


        <Button
            android:id="@+id/rippleViewGallery"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/horizontal_vertical_spacing"
            android:text="@string/gallery"
            android:textColor="@color/primerColorBlack" />


        <Button
            android:id="@+id/rippleViewSkip"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/horizontal_vertical_spacing"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateTintMode="multiply"
        android:visibility="gone" />
</RelativeLayout>