<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:visibility="visible">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">


            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/toolbar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/mobile_verification"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/enterotp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/enter_otp"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/otpEditText"
                        style="@style/EditTextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin16dp"
                        android:layout_marginEnd="@dimen/margin16dp"
                        android:cursorVisible="false"
                        android:gravity="left"
                        android:hint="123456"
                        android:importantForAutofill="no"
                        android:letterSpacing="1.5"
                        android:maxLength="6"
                        android:maxLines="1"
                        tools:ignore="RtlHardcoded"
                        tools:targetApi="lollipop">
                        <requestFocus />

                    </EditText>

                    <TextView
                        android:id="@+id/resendCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/resend_code_"
                        android:textColor="#0980f4"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/done"
                        style="?android:attr/button"
                        android:layout_width="match_parent"
                        android:layout_height="?android:actionBarSize"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp"
                        android:background="@drawable/signup_with_fb_bg"
                        android:maxLines="1"
                        android:padding="16dp"
                        android:text="@string/done"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>