<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primaryDark"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ToolbarTheme" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/tvVersion"
                android:layout_below="@+id/toolbar">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp">

                        <FrameLayout
                            android:id="@+id/frameImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:padding="8dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/user_image"
                                android:layout_width="172dp"
                                android:layout_height="172dp"
                                android:layout_marginBottom="16dp"
                                app:civ_border_color="@color/gray_closed"
                                app:civ_border_width="0.2dp" />


                        </FrameLayout>


                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="@string/you"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20sp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="@string/your_details"
                        android:textAllCaps="false"
                        android:textColor="@color/greyDark"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="16sp"
                        android:background="@color/greyLight" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical">

                        <!--Mobile Number-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20sp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/mobile_number"
                                android:textColor="@color/greyDark" />

                            <TextView
                                android:id="@+id/mobileNumber"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:textColor="@color/black"
                                tools:text="@string/mobile_number" />
                        </LinearLayout>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1sp"
                            android:background="@color/greyLight" />

                        <!-- Location -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20sp"
                            android:orientation="horizontal"

                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/location"
                                android:textColor="@color/greyDark" />

                            <TextView
                                android:id="@+id/userLocation"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:textColor="@color/black"
                                tools:text="@string/location" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1sp"
                            android:background="@color/greyLight" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:orientation="vertical">


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1sp"
                            android:background="@color/greyLight" />

                        <TextView
                            android:id="@+id/logout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center"
                            android:padding="20sp"
                            android:paddingTop="4dp"
                            android:text="@string/logout"
                            android:textColor="@color/primaryDark"
                            android:textSize="16sp" />


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1sp"
                            android:background="@color/greyLight" />


                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16sp"
                android:text="@string/app_name"
                android:textColor="@color/grey"
                android:textSize="16sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>